--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/assets/tailwind.output.css" rel="stylesheet" />
+    <title>F8 - Shop</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./assets/reset.css" />
   </head>
+
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <!-- Navbar -->
+    <div>
+      <ul>
+        <li>Giới thiệu</li>
+        <li>Kết nối</li>
+        <li>Tải ứng dụng</li>
+      </ul>
+      <ul>
+        <li>Đăng ký</li>
+        <li>Đăng nhập</li>
+      </ul>
+    </div>
+
+    <!-- Form layout -->
+    <div>
+      <form action="" form">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" id="name" />
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" id="password" />
+        </div>
+      </form>
+    </div>
+
+    <!-- Column layout -->
+    <div>
+      <div>
+        <h2>Sidebar one</h2>
+        <p>
+          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+          appealed to me.Since I've been interested in your company for a long time, I would like to
+          apply today as a Sample position in permanent employment.
+        </p>
+      </div>
+      <div>
+        <h2>Main column</h2>
+        <p>
+          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+          appealed to me.Since I've been interested in your company for a long time, I would like to
+          apply today as a Sample position in permanent employment.
+        </p>
+        <p>
+          At the moment I'm working as a Sample position at Sample company.My most important tasks
+          include familiarizing myself with new products, conducting sales talks and transferring
+          orders.
+        </p>
+        <p>
+          Your job list sounds great! I hope that this will enable me to develop personal and
+          professional development opportunities.I like your focus and image in this industry very
+          well, so I see you as a very interesting employer.I have been following your development
+          for a long time in the media and therefore believe that I also fit in well with the
+          company.
+        </p>
+      </div>
+      <div>
+        <h2>Sidebar two</h2>
+        <p>
+          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+          appealed to me.Since I've been interested in your company for a long time, I would like to
+          apply today as a Sample position in permanent employment.
+        </p>
+      </div>
+    </div>
+
+    <!-- Feature layout -->
+    <div>
+      <div>
+        <h2>Feature 1</h2>
+        <p>
+          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+          appealed to me.Since I've been interested in your company for a long time, I would like to
+          apply today as a Sample position in permanent employment.
+        </p>
+      </div>
+      <div>
+        <h2>Feature 2</h2>
+        <p>
+          At the moment I'm working as a Sample position at Sample company.My most important tasks
+          include familiarizing myself with new products, conducting sales talks and transferring
+          orders.
+        </p>
+      </div>
+      <div>
+        <h2>Feature 3</h2>
+        <p>
+          Your job list sounds great! I hope that this will enable me to develop personal and
+          professional development opportunities.I like your focus and image in this industry very
+          well, so I see you as a very interesting employer.I have been following your development
+          for a long time in the media and therefore believe that I also fit in well with the
+          company.
+        </p>
+      </div>
+    </div>
+
+    <!-- Wrap layout -->
+    <div>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+    </div>
+
+    <!-- Center layout -->
+    <div>
+      <h3>Center item</h3>
+    </div>
+
+    <!-- Chart -->
+    <div>
+      <div>10%</div>
+      <div>20%</div>
+      <div>40%</div>
+      <div>90%</div>
+      <div>80%</div>
+      <div>40%</div>
+      <div>10%</div>
+      <div>20%</div>
+      <div>69%</div>
+      <div>96%</div>
+      <div>60%</div>
+      <div>88%</div>
+    </div>
+
+    <!-- End -->
+    <div>
+      <div>
+        <p>
+          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+          appealed to me.Since I've been interested in your company for a long time, I would like to
+          apply today as a Sample position in permanent employment.
+        </p>
+        <p>
+          At the moment I'm working as a Sample position at Sample company.My most important tasks
+          include familiarizing myself with new products, conducting sales talks and transferring
+          orders.
+        </p>
+        <p>
+          Your job list sounds great! I hope that this will enable me to develop personal and
+          professional development opportunities.I like your focus and image in this industry very
+          well, so I see you as a very interesting employer.I have been following your development
+          for a long time in the media and therefore believe that I also fit in well with the
+          company.
+        </p>
+      </div>
+      <div>
+        <div>
+          <p>
+            I'm writing to you in reference to the job position advertised MyCV.vn which immediately
+            appealed to me.Since I've been interested in your company for a long time.
+          </p>
+        </div>
+        <div>
+          <p>
+            At the moment I'm working as a Sample position at Sample company.My most important tasks
+            include familiarizing myself with new products, conducting sales talks and transferring
+            orders.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
