--- a/src/index.html
+++ b/src/index.html
@@ -4,171 +4,39 @@
     <title>F8 - Shop</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./assets/reset.css" />
+    <link rel="stylesheet" href="./assets/tailwind.output.css" />
   </head>
 
-  <body>
-    <!-- Navbar -->
-    <div>
-      <ul>
-        <li>Giới thiệu</li>
-        <li>Kết nối</li>
-        <li>Tải ứng dụng</li>
-      </ul>
-      <ul>
-        <li>Đăng ký</li>
-        <li>Đăng nhập</li>
-      </ul>
-    </div>
-
-    <!-- Form layout -->
-    <div>
-      <form action="" form">
-        <div>
-          <label for="name">Name:</label>
-          <input type="text" id="name" />
-        </div>
-        <div>
-          <label for="password">Password:</label>
-          <input type="password" id="password" />
-        </div>
-      </form>
-    </div>
-
-    <!-- Column layout -->
-    <div>
-      <div>
-        <h2>Sidebar one</h2>
-        <p>
-          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-          appealed to me.Since I've been interested in your company for a long time, I would like to
-          apply today as a Sample position in permanent employment.
-        </p>
+  <body class="w-screen h-screen">
+    <div
+      class="relative items-center mx-auto my-auto border-2 shadow-lg cursor-pointer w-96 rounded-xl"
+    >
+      <div class="flex items-center justify-center bg-blue-700 h-28 rounded-xl">
+        <h1 class="absolute mx-auto text-2xl text-center text-white right">Image goes here</h1>
       </div>
-      <div>
-        <h2>Main column</h2>
-        <p>
-          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-          appealed to me.Since I've been interested in your company for a long time, I would like to
-          apply today as a Sample position in permanent employment.
-        </p>
-        <p>
-          At the moment I'm working as a Sample position at Sample company.My most important tasks
-          include familiarizing myself with new products, conducting sales talks and transferring
-          orders.
-        </p>
-        <p>
-          Your job list sounds great! I hope that this will enable me to develop personal and
-          professional development opportunities.I like your focus and image in this industry very
-          well, so I see you as a very interesting employer.I have been following your development
-          for a long time in the media and therefore believe that I also fit in well with the
-          company.
-        </p>
-      </div>
-      <div>
-        <h2>Sidebar two</h2>
-        <p>
-          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-          appealed to me.Since I've been interested in your company for a long time, I would like to
-          apply today as a Sample position in permanent employment.
-        </p>
-      </div>
-    </div>
 
-    <!-- Feature layout -->
-    <div>
-      <div>
-        <h2>Feature 1</h2>
-        <p>
-          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-          appealed to me.Since I've been interested in your company for a long time, I would like to
-          apply today as a Sample position in permanent employment.
-        </p>
+      <div class="p-2 border-b-2">
+        <h6>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis beatae nulla, atque et
+          sunt ad voluptatum quidem impedit numquam quia? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Facilis beatae nulla, atque et sunt ad voluptatum quidem impedit numquam
+          quia?
+        </h6>
       </div>
-      <div>
-        <h2>Feature 2</h2>
-        <p>
-          At the moment I'm working as a Sample position at Sample company.My most important tasks
-          include familiarizing myself with new products, conducting sales talks and transferring
-          orders.
-        </p>
+
+      <div class="flex flex-wrap items-center m-2">
+        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #React </span>
+        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #Redux </span>
+        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #Javascript </span>
       </div>
-      <div>
-        <h2>Feature 3</h2>
-        <p>
-          Your job list sounds great! I hope that this will enable me to develop personal and
-          professional development opportunities.I like your focus and image in this industry very
-          well, so I see you as a very interesting employer.I have been following your development
-          for a long time in the media and therefore believe that I also fit in well with the
-          company.
-        </p>
-      </div>
-    </div>
 
-    <!-- Wrap layout -->
-    <div>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-    </div>
-
-    <!-- Center layout -->
-    <div>
-      <h3>Center item</h3>
-    </div>
-
-    <!-- Chart -->
-    <div>
-      <div>10%</div>
-      <div>20%</div>
-      <div>40%</div>
-      <div>90%</div>
-      <div>80%</div>
-      <div>40%</div>
-      <div>10%</div>
-      <div>20%</div>
-      <div>69%</div>
-      <div>96%</div>
-      <div>60%</div>
-      <div>88%</div>
-    </div>
-
-    <!-- End -->
-    <div>
-      <div>
-        <p>
-          I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-          appealed to me.Since I've been interested in your company for a long time, I would like to
-          apply today as a Sample position in permanent employment.
-        </p>
-        <p>
-          At the moment I'm working as a Sample position at Sample company.My most important tasks
-          include familiarizing myself with new products, conducting sales talks and transferring
-          orders.
-        </p>
-        <p>
-          Your job list sounds great! I hope that this will enable me to develop personal and
-          professional development opportunities.I like your focus and image in this industry very
-          well, so I see you as a very interesting employer.I have been following your development
-          for a long time in the media and therefore believe that I also fit in well with the
-          company.
-        </p>
-      </div>
-      <div>
-        <div>
-          <p>
-            I'm writing to you in reference to the job position advertised MyCV.vn which immediately
-            appealed to me.Since I've been interested in your company for a long time.
-          </p>
-        </div>
-        <div>
-          <p>
-            At the moment I'm working as a Sample position at Sample company.My most important tasks
-            include familiarizing myself with new products, conducting sales talks and transferring
-            orders.
-          </p>
-        </div>
+      <div class="flex flex-wrap items-center bg-white border-t-2 rounded-b-xl">
+        <button class="p-1 px-2 m-2 text-white bg-blue-600 border shadow-sm rounded-2xl">
+          Go to Project
+        </button>
+        <button class="p-1 px-2 m-2 text-blue-600 border-2 border-blue-600 shadow-sm rounded-2xl">
+          Github
+        </button>
       </div>
     </div>
   </body>
