--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>F8 - Shop</title>
+    <title>Tailwind seminar</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/tailwind.output.css" />
   </head>
 
@@ -21,13 +20,7 @@
           sunt ad voluptatum quidem impedit numquam quia? Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Facilis beatae nulla, atque et sunt ad voluptatum quidem impedit numquam
           quia?
-        </h6>
-      </div>
-
-      <div class="flex flex-wrap items-center m-2">
-        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #React </span>
-        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #Redux </span>
-        <span class="px-2 mx-1 my-1 border border-blue-300 rounded-2xl"> #Javascript </span>
+        <span class="hashtag"> #Javascript </span>
       </div>
 
       <div class="flex flex-wrap items-center bg-white border-t-2 rounded-b-xl">
