--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
 
       <div class="border-b-2 p-2">
         <div class="mb-2">
-          <h6>Thành viên:</h6>
+          <h6 class="text-center">Thành viên:</h6>
           <ul class="ml-4 list-disc">
-            <li>Nguyễn Thanh Nhàn</li>
-            <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
+            <li class="text-red-400 text-xl tracking-widest">Nguyễn Thanh Nhàn</li>
+            <li class="text-blue-400 text-lg tracking-tight">Bùi Công Tri</li>
+            <li class="text-sky-400 text-md tracking-wide">Lê Khánh Châu</li>
+            <li class="text-cyan-300 text-sm tracking-wider">Đinh Thị Ánh Nguyệt</li>
+            <li class="text-yellow-400 text-xs">Thới Đức Luận</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
@@ -30,6 +30,15 @@
         <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
         <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
       </div>
+    </div>
+    <div class="fixed right-8 top-1/2">
+      <a
+        href="https://tailwindcss.com/docs/customizing-colors"
+        target="_blank"
+        class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full bg-blue-300 p-4 text-3xl leading-none"
+        >+</a
+      >
+      <span class="absolute top-0 right-0 h-12 w-12 animate-ping rounded-full bg-blue-300 p-4"></span>
     </div>
   </body>
 </html>
