--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
       </div>
 
-      <div class="border-b-2 p-2">
+      <div class="border-b-2 p-2 h-32 overflow-y-scroll">
         <div class="mb-2">
           <h6>Thành viên:</h6>
           <ul class="ml-4 list-disc">
