--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body class="h-screen w-screen">
-    <div class="relative mx-auto my-auto w-96 cursor-pointer items-center rounded-xl border-2 shadow-lg">
+    <div class="relative mx-auto my-auto w-full cursor-pointer items-center rounded-xl border-2 shadow-lg lg:w-96">
       <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
         <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
       </div>
@@ -27,8 +27,12 @@
       </div>
 
       <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
-        <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
+        <button class="m-0 w-1/2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm lg:m-2 lg:w-fit">
+          Go to Project
+        </button>
+        <button class="m-0 w-1/2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm lg:m-2 lg:w-fit">
+          Github
+        </button>
       </div>
     </div>
   </body>
