--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,48 @@
   </head>
 
   <body class="h-screen w-screen">
-    <div class="relative mx-auto my-auto w-96 cursor-pointer items-center rounded-xl border-2 shadow-lg">
+    <div class="relative mx-auto cursor-pointer rounded-xl border-2 shadow-lg container">
       <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
-        <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
+        <h1 class="absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
       </div>
 
-      <div class="border-b-2 p-2">
-        <div class="mb-2">
-          <h6>Thành viên:</h6>
-          <ul class="ml-4 list-disc">
-            <li>Nguyễn Thanh Nhàn</li>
-            <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
-          </ul>
+      <div class="border-b-2 p-2 w-96">
+        <div class="flex flex-nowrap w-96 overflow-x-auto">
+          <div class="mb-2 basis-full min-w-full">
+            <h6>Thành viên:</h6>
+            <ul class="ml-4 list-disc list-inside">
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Nguyễn Thanh Nhàn</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Bùi Công Tri</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Lê Khánh Châu</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Đinh Thị Ánh Nguyệt</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Thới Đức Luận</li>
+            </ul>
+          </div>
+          <div class="mb-2 basis-full min-w-full">
+            <h6>Thành viên:</h6>
+            <ul class="ml-4 list-disc list-inside">
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Nguyễn Thanh Nhàn</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Bùi Công Tri</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Lê Khánh Châu</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Đinh Thị Ánh Nguyệt</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Thới Đức Luận</li>
+            </ul>
+          </div>
+          <div class="mb-2 basis-full min-w-full">
+            <h6>Thành viên:</h6>
+            <ul class="ml-4 list-disc list-inside">
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Nguyễn Thanh Nhàn</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Bùi Công Tri</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Lê Khánh Châu</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Đinh Thị Ánh Nguyệt</li>
+              <li class="list-item hover:text-sky-400 hover:tracking-wide transition-all duration-200 ease-in">Thới Đức Luận</li>
+            </ul>
+          </div>
         </div>
-        <span class="hashtag"> #Javascript </span>
+        <span class="relative hashtag"> 
+          <span class="hidden lg:inline">#Javascript</span>
+          <span class="inline lg:hidden">#JS</span>
+        </span>
       </div>
 
       <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
