--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,25 @@
     <link rel="stylesheet" href="./assets/tailwind.output.css" />
   </head>
 
-  <body class="h-screen w-screen">
-    <div class="relative mx-auto my-auto w-96 cursor-pointer items-center rounded-xl border-2 shadow-lg">
+  <body class="relative h-screen w-screen">
+    <div class="absolute z-10 mx-auto my-auto w-96 animate-loadingFadeOut cursor-pointer rounded-xl border-2 shadow-lg">
+      <div class="flex h-28 items-center justify-center rounded-xl bg-slate-200">
+        <h1 class="right absolute mx-auto text-center"></h1>
+      </div>
+
+      <div class="border-b-2 p-2">
+        <div class="my-2 mr-8 ml-4 h-8 w-32 rounded-md bg-slate-200"></div>
+        <div class="my-2 mr-8 ml-4 h-8 w-72 rounded-md bg-slate-200"></div>
+        <div class="my-2 mr-8 ml-4 h-8 w-64 rounded-md bg-slate-200"></div>
+        <div class="my-2 mr-8 ml-4 h-8 w-16 rounded-md bg-slate-200"></div>
+      </div>
+
+      <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
+        <div class="m-2 h-8 w-32 rounded-2xl border bg-slate-200 p-1 px-2 text-white shadow-sm"></div>
+        <div class="m-2 h-8 w-32 rounded-2xl border-2 border-slate-200 p-1 px-2 text-slate-200 shadow-sm"></div>
+      </div>
+    </div>
+    <div class="invisible absolute mx-auto my-auto w-96 animate-fadeIn cursor-pointer rounded-xl border-2 shadow-lg">
       <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
         <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
       </div>
