--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <div class="border-b-2 p-2">
         <div class="mb-2">
           <h6>Thành viên:</h6>
-          <ul class="ml-4 list-disc">
+          <ul class="ml-4 list-disc"> 
             <li>Nguyễn Thanh Nhàn</li>
             <li>Bùi Công Tri</li>
             <li>Lê Khánh Châu</li>
@@ -45,7 +45,7 @@
 
       <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
         <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
-        <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
+        <button class="m-2 rounded-2xl border-2 hover:bg-blue-600 hover:text-white  border-blue-600 p-1 px-2 text-blue-600 shadow-sm transition duration-200 ease-out">Github</button>
       </div>
     </div>
   </body>
